--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    font-family: 'Play', sans-serif;
+    font-size: large;
+}
+
+body {
+    background-color: #e2e0df;
+}
+
 .container {
     display: flex;
     /* flex-direction: column; */
@@ -5,51 +15,62 @@
     align-items: center;
     position: fixed;
     top: 0;
-    /* left: 0; */
     width: 100%;
     height: 30%;
-    /* z-index: 10; */
-    background: #eeeeee;
-    box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
-}
+    /* box-shadow: 0px 7px 8px #767676; */
+    box-shadow: 0px 5px 8px #000000;
 
-body {
-    font-family: 'Indie Flower', cursive;
-    font-size: large;
+    background-image: url("background.jpg");
+    background-size: cover;
+    background-position: center;
+    /* background-repeat: no-repeat; */
 }
 
 h1 {
-    /* text-align: center; */
-    font-size: 60px;
-    text-shadow: 3px 3px 1px green;
-    /* align-self: center; */
-    /* padding: 1px; */
-    /* letter-spacing: 10px; */
-    /* align-items: baseline; */
+    font-size: 70px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    color: whitesmoke;
+    text-shadow: 
+        1px 1px 1px #000000, 
+        1px -1px 0 #767676, 
+        -1px 2px 1px #737272, 
+        -2px 4px 1px #767474, 
+        -3px 6px 1px #787777, 
+        -4px 8px 1px #7b7a7a, 
+        -5px 10px 1px #7f7d7d, 
+        -6px 12px 1px #828181, 
+        -7px 14px 1px #868585, 
+        -8px 16px 1px #8b8a89, 
+        -9px 18px 1px #8f8e8d, 
+        -10px 20px 1px #949392,
+        -11px 22px 1px #999897, 
+        -12px 24px 1px #9e9c9c, 
+        -13px 26px 1px #a3a1a1, 
+        -14px 28px 1px #a8a6a6, 
+        -15px 30px 1px #000000;
 }
 
 #gmap {
     border: 1px solid black;
+    border-radius: 5px;
 }
-
 
 table {
     margin-top: 300px;
     border-collapse: collapse;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 td {
-    /* border-top: 1px solid black; */
     width: fit-content;
     border-bottom: 1px solid black;
-    padding: 5px;
+    padding: 10px;
 }
 
-
-tr:hover, tr:nth-child(even):hover {
+tr:hover {
     background-color: coral;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2;
+    cursor: pointer;
 }
